# LearnGLES

./: .gitignore  ReadMe.md  build.gradle  buildDebug.bat  file2str.py  installDebug.bat  logcat.bat
app/src/main/cpp/: 0010_gl_transform.cpp  0010_gl_transform.h  0011_gl_transform2.cpp  0011_gl_transform2.h  0012_gl_coordinate.cpp  0012_gl_coordinate.h  0013_gl_camera.cpp  0013_gl_camera.h  0014_gl_light.cpp  0014_gl_light.h  0015_gl_light_diffuse.cpp  0015_gl_light_diffuse.h  0016_gl_light_specular.cpp  0016_gl_light_specular.h  0017_gl_light_material.cpp  0017_gl_light_material.h  0018_gl_light_maps.cpp  0018_gl_light_maps.h  0018_gl_light_maps_specular.cpp  0019_gl_light_maps_specular.cpp  0019_gl_light_maps_specular.h  001_gl_color_app.cpp  001_gl_color_app.h  0020_gl_light_directional.cpp  0020_gl_light_directional.h  0021_gl_light_point.cpp  0021_gl_light_point.h  0022_gl_light_spot.cpp  0022_gl_light_spot.h  002_gl_point_app.cpp  003_gl_lines_app.cpp  004_gl_triangle_app.cpp  004_gl_triangle_app.h  005_gl_regular_polygons.cpp  005_gl_regular_polygons.h  006_gl_cube_app.cpp  006_gl_cube_app.h  007_gl_frame_checker.cpp  007_gl_frame_checker.h  007_gl_texture.cpp  (+18 more)
app/src/main/cpp/shaders/: 0010_v.glsl  0010_v.glsl.in  0012_f.glsl  0013_f.glsl.in  0013_v.glsl  0014_cube_f.glsl  0015_cube_f.glsl  0015_cube_f.glsl.in  0016_cube_f.glsl  0016_cube_f.glsl.in  0016_cube_v.glsl  0017_cube_f.glsl  0018_cube_f.glsl  0018_cube_v.glsl.in  0018_light_f.glsl  0019_cube_v.glsl  0020_cube_f.glsl  0021_cube_f.glsl  0021_light_v.glsl  0022_cube_f.glsl  002_v.glsl  003_f.glsl  004_f.glsl  004_v.glsl  005_v.glsl  006_f.glsl  006_v.glsl  007_f.glsl  008_f.glsl  008_v.glsl  009_f.glsl
app/src/main/cpp/shaders/include/: 0011_f.glsl.in  0012_v.glsl.in  0014_cube_f.glsl.in  0016_cube_v.glsl.in  0017_cube_f.glsl.in  0017_light_v.glsl.in  (+16 more)
(+6 files in other folders)
